<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/shareapp"
        app:showAsAction="always"
        android:id="@+id/share">
    </item>
    <item
        android:id="@+id/reset"
        android:title="Reset All">

    </item>
    <item
        android:title="@string/Rate"
        android:id="@+id/rate">
    </item>
    <item
        android:title="@string/Review"
        android:id="@+id/review">
    </item>
    <item
        android:title="@string/more"
        android:id="@+id/moreapp">
    </item>
    <item
        android:title="@string/exit"
        android:id="@+id/exit">
    </item>
</menu>